app.css
body {
  font-family: futura, "helvetica neue";
  font-size: 24px;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.project-editor {
  display: flex;
  flex-direction: column;
  width: 50%;
}

input {
  border-radius: 0.2em;
  height: 1.2em;
  padding: 0.25em;
  font-size: 1em;
  text-align: center;
  flex-grow: 1;
}

div[contenteditable] {
  border: 2px dashed #777;
  border-radius: 0.2em;
  padding: 0.2em;
  margin-top: 0.2em;
  margin-bottom: 0.2em;
  font-size: 0.9em;
  font-family: "Helvetica Neue", sans-serif;
  flex-grow: 1;
}

.form-pair {
  display: flex;
  margin-top: 1em;
}

.form-pair label {
  width: 8em;
}

.form-pair .value-container {
  flex-grow: 1;
  display: flex;
}

.things-done-value-container {
  flex-direction: column;
}

.hidden {
  display: none !important;
  opacity: 0;
  transition: opacity 1s;
}

#status-message {
  background-color: #ffffee;
}

